--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			margin-left: 1%;
 		}
 		
-		input,select,textarea, #history {
+		input, select, textarea, #history {
 			font-size: 100%;
 			font-weight: bolder;
 			font-family: Lucida Sans Unicode;
@@ -89,7 +89,7 @@
 			font-size: 60%; 
 			font-weight: bolder; 
 			padding: 4px; 
-			background-color: white;
+			background-color: #F5F5F5;
 			max-width: 50%;
 			min-width: 220px;
 			height: 180px;
@@ -183,7 +183,7 @@
 			float: left; 
 			text-align: right; 
 			padding: 2% 3% 2% 2%; 
-			background-color: #f2f2f2; 
+			background-color: #EBEBEB; 
 			-moz-border-radius: 0 28px 28px 0; 
 			-webkit-border-radius: 0 28px 28px 0;
 		}
@@ -286,7 +286,7 @@
 	<h2>Info</h2>
 	<p>
 		Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-		Version: 20191029.1 <br>
+		Version: 20191029.2 <br>
 		Pageview count: <img src="https://hitwebcounter.com/counter/counter.php?page=7138684&style=0024&nbdigits=5&type=page&initCount=0" title="Pageview counter" Alt="Pageview counter" border="0" >             
 	</p>
 	<p>
