--- a/index.html
+++ b/index.html
@@ -351,12 +351,10 @@
 				</select>
 				: <input type="text" name="recup" id="recup" value="" maxlength="4" size="5" readonly> <input type="text" name="recupdec" id="recupdec" value="" maxlength="4" size="5" readonly></p>
 			<p>Total hours : <input type="time" name="total" id="total" value="" readonly> <input type="text" name="totaldec" id="totaldec" value="" maxlength="4" size="5" readonly></p>
-			<p><span class="tooltip" tooltip="Time data from before the storage changes (version 20191009.5) need to be converted. Refresh the page to do so.">&#128712;</span>Total recup : <input type="text" name="recuptotal" id="recuptotal" maxlength="4" size="5" readonly></p>
+			<p><span class="tooltip" tooltip="Time data from before the storage changes (version 20191009.5) needs to be converted. Refresh the page to do so.">&#128712;</span>Total recup : <input type="text" name="recuptotal" id="recuptotal" maxlength="4" size="5" readonly></p>
 			<div id="history" style=""></div>
 			<!--<textarea id="history2" rows="6" cols="50" style=""></textarea>-->
 			<div style="font-size: 40%; float: right; clear: both; width: 100%;">
-				<!--<input type="checkbox" id="nosave" name="nosave"/><label>Don't save today.</label>-->
-				<!--<input type="checkbox" id="autoend" name="autoend"/><label>Automatically set end time on close.</label><br>-->
 				<span><label class="switch"><input type="checkbox" id="nosave"><span class="slider round" id="checkred"></span></label> Don't save today.</span>&nbsp;&nbsp;&nbsp;
 				<span><label class="switch"><input type="checkbox" id="autoend"><span class="slider round"></span></label> Automatically set end time on close.</span>&nbsp;&nbsp;&nbsp;
 				<span><label class="switch"><input type="checkbox" id="startmin5"><span class="slider round"></span></label> Subtract 5 min from open.</span>
