default break wasn't added to time calculation

--- a/index.html
+++ b/index.html
@@ -759,6 +759,7 @@
 			document.getElementById("hourschedule").value = hourschedule;
 		if ( break_time_default ) {
 			document.getElementById("break_time_default").value = break_time_default;
+			setBreak(break_time_default);
 		} else {
 			document.getElementById("break_time_default").value = 0;
 		}
