--- a/index.html
+++ b/index.html
@@ -350,8 +350,7 @@
 			<div style="width:15%; float: left; text-align: right; padding: 2% 1% 1% 2%; font-size: 60%;"><i class="far fa-exclamation-triangle fa-2x" style="color: orange;"></i> Notification:</div> 
 			<div style="width:75%; float: right; text-align: left; padding: 2% 1% 1% 2%; font-size: 60%;">
 				Spread the word!!!<br>
-				I've implemented a new way to store time data in the background.<br>
-				Please notify my if you encounter any bugs.
+				<i class="fas fa-hat-santa fa-2x" style="color: red;"></i> Happy holidays everyone :) <i class="fas fa-hat-santa fa-2x" style="color: red;"></i>
 			</div> 
 		</p>
 		<div class="column" id="column1" style="">
