--- a/index.html
+++ b/index.html
@@ -338,8 +338,9 @@
 	<h2>Info</h2>
 	<p>
 		Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-		Version: 20191112.1 <br>
+		Version: 20191220.1 <br>
 		<!--Pageview count: <img src="https://hitwebcounter.com/counter/counter.php?page=7138684&style=0024&nbdigits=5&type=page&initCount=0" title="Pageview counter" Alt="Pageview counter" border="0" >-->
+		Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"target="_blank">Check the master branch on Github</a>
 	</p>
 	<p>
 		If you delete your browser data the history will reset. You can export and import your data.<br>
@@ -365,13 +366,14 @@
 		&emsp;will subtract 5 min from the time the page was opened (and the start time). This is to take the time to boot your laptop, ... into account.
 	</p>
 	<p>
-		<input type="radio" name="historydeleteoption" id="historydeleteoptiondays" value="days" onchange="greyOutHistoryDeleteOption()" checked="checked"><label for="historydeleteoptiondays" id="historydeleteoptiondayslabel">Max days to keep history: <input type="number" name="historyretain" id="historyretain" value="30" min="0" max="999" style="width: 70px; margin: 2px 0;"><br></label>
-		<input type="radio" name="historydeleteoption" id="historydeleteoptionperiod" value="period" onchange="greyOutHistoryDeleteOption()"><label for="historydeleteoptionperiod" id="historydeleteoptionperiodlabel">Reset history on day <input type="number" name="historyresetday" id="historyresetday" value="1" min="1" max="31" style="width: 70px; margin: 2px 0;"> of every <input type="number" name="historyresetperiod" id="historyresetperiod" value="4" min="1" style="width: 70px; margin: 2px 0;">
+		<input type="radio" name="historydeleteoption" id="historydeleteoptiondays" value="days" onchange="greyOutHistoryDeleteOption()" checked="checked"><label for="historydeleteoptiondays" id="historydeleteoptiondayslabel">Max days to keep history: <input type="number" name="historyretain" id="historyretain" value="30" min="0" max="999" style="width: 70px; margin: 2px 0;"></label><span class="tooltip" tooltip="This will keep XXX days of data."><i class="far fa-info-circle greyed"></i></span><br>
+		<input type="radio" name="historydeleteoption" id="historydeleteoptionperiod" value="period" onchange="greyOutHistoryDeleteOption()"><label for="historydeleteoptionperiod" id="historydeleteoptionperiodlabel">Reset history on day <input type="number" name="historyresetday" id="historyresetday" value="1" min="1" max="31" onchange="maxValuesDeleteOption()" style="width: 70px; margin: 2px 0;"> of every <input type="number" name="historyresetperiod" id="historyresetperiod" value="4" min="1" onchange="maxValuesDeleteOption()" style="width: 70px; margin: 2px 0;">
 			<select name="historyresetperiodunit" id="historyresetperiodunit" onchange="maxValuesDeleteOption()" style="margin: 2px 0;">
 				<option value="days">days</option>
 				<option value="weeks">weeks</option>
 				<option value="months">months</option>
-			</select></label>
+			</select></label><span class="tooltip" tooltip="This will delete the entire history that's displayed next to 'Reset date'."><i class="far fa-info-circle greyed"></i></span><br>
+			<label for="resetdate" id="resetdatelabel" style="margin-left: 21px;">Reset date: <input type="text" name="resetdate" id="resetdate" size="20" style="padding-left: 5px;" readonly></label>
 	</p>
 	<br>
 	<a href="#" class="modalbutton" id="modalclosebutton" rel="modal:close">Close</a>
@@ -702,6 +704,10 @@
 		return e.options[e.selectedIndex].value;
 	}
 	
+	function setResetDate(date){
+		document.getElementById("resetdate").value = date;
+	}
+	
 	function greyOutHistoryDeleteOption() {
 		if(document.getElementById("historydeleteoptiondays").checked) {
 			document.getElementById("historydeleteoptiondayslabel").style.opacity = "100%";
@@ -710,6 +716,8 @@
 			document.getElementById("historyresetday").disabled = true;
 			document.getElementById("historyresetperiod").disabled = true;
 			document.getElementById("historyresetperiodunit").disabled = true;
+			document.getElementById("resetdatelabel").style.opacity = "40%";
+			document.getElementById("resetdate").disabled = true;
 		} else {
 			document.getElementById("historydeleteoptionperiodlabel").style.opacity = "100%";
 			document.getElementById("historydeleteoptiondayslabel").style.opacity = "40%";
@@ -717,20 +725,61 @@
 			document.getElementById("historyresetday").disabled = false;
 			document.getElementById("historyresetperiod").disabled = false;
 			document.getElementById("historyresetperiodunit").disabled = false;		
+			document.getElementById("resetdatelabel").style.opacity = "100%";
+			document.getElementById("resetdate").disabled = false;
 			maxValuesDeleteOption();
-			localStorage.setItem("lasthistoryclean", moment());
+			//localStorage.setItem("lasthistoryclean", moment());
 		}
 	}
 
 	function maxValuesDeleteOption() {
-		var historyresetperiodunit = getHistoryResetPeriodUnit();
+		var historyresetperiodunit = getHistoryResetPeriodUnit(),
+			cleaningday = calculateCleaningDay();
 		if ( historyresetperiodunit == "days" ) {
 			document.getElementById("historyresetperiod").setAttribute("max", "31"); 
+			document.getElementById("historyresetday").value = "1"; 
+			document.getElementById("historyresetday").disabled = true;
 		} else if ( historyresetperiodunit == "weeks" ) {
 			document.getElementById("historyresetperiod").setAttribute("max", "4"); 
+			document.getElementById("historyresetday").setAttribute("max", "7"); 
+			document.getElementById("historyresetday").disabled = false;
 		} else if ( historyresetperiodunit == "months" ) {
 			document.getElementById("historyresetperiod").setAttribute("max", "48"); 
+			document.getElementById("historyresetday").setAttribute("max", "31"); 
+			document.getElementById("historyresetday").disabled = false;
 		}
+		localStorage.setItem("cleaningday", cleaningday);
+		setResetDate(cleaningday.format("dddd, DD-MM-YYYY"));
+	}
+	
+	function calculateCleaningDay() {
+		var historyretain = localStorage.getItem("historyretain"),
+			historyresetday = localStorage.getItem("historyresetday"),
+			historyresetperiod = localStorage.getItem("historyresetperiod"),
+			historyresetperiodunit = localStorage.getItem("historyresetperiodunit"),
+			cleaningday = moment();
+			 
+		if ( historyresetperiodunit == "days" ) {
+			cleaningday = cleaningday.add(historyresetperiod, 'days');
+			console.log("cleaningday: " + cleaningday.format() + " /// period: " + historyresetperiod);
+		} else if ( historyresetperiodunit == "weeks" ) {
+			cleaningday = cleaningday.add(historyresetperiod, 'weeks');
+			cleaningday = cleaningday.day(historyresetday);
+		} else if ( historyresetperiodunit == "months" ) {
+			cleaningday = cleaningday.add(historyresetperiod, 'months');
+			cleaningday = cleaningday.date(historyresetday);
+		}
+		localStorage.setItem("historyretain", getHistoryRetain());
+		localStorage.setItem("historyresetday", getHistoryResetDay());
+		localStorage.setItem("historyresetperiod", getHistoryResetPeriod());
+		localStorage.setItem("historyresetperiodunit", getHistoryResetPeriodUnit());
+		
+		cleaningday.hour(0);
+		cleaningday.minute(0);
+		cleaningday.second(0);
+		cleaningday.millisecond(0);
+		
+		return cleaningday;
 	}
 	
 	function setHistory(){
@@ -778,9 +827,8 @@
 		var keys = Object.keys(localStorage),
 			i = 0,
 			today = moment(),
-			//today2 = new Date(todayDate()),
-			deleteoption = localStorage.getItem("historydeleteoption"),
-			lasthistoryclean = moment(localStorage.getItem("lasthistoryclean"));
+			deleteoption = localStorage.getItem("historydeleteoption");
+			//lasthistoryclean = moment(localStorage.getItem("lasthistoryclean"));
 		const userKeyRegExp = /^[0-9]{2}-[0-9]{2}-[0-9]{4}/;
 		
 		if ( deleteoption == "days" ) {
@@ -790,27 +838,18 @@
 					delete localStorage[key];
 				}
 			}	
-		} else if (deleteoption == "period"){// && lasthistoryclean < today) {
-			var historyretain = localStorage.getItem("historyretain"),
-				historyresetday = localStorage.getItem("historyresetday"),
-				historyresetperiod = localStorage.getItem("historyresetperiod"),
-				historyresetperiodunit = localStorage.getItem("historyresetperiodunit"),
-				cleaningday = moment();
-				 
-			if ( historyresetperiodunit == "days" ) {
-				cleaningday = cleaningday.add(historyresetperiod, 'days');
-			} else if ( historyresetperiodunit == "weeks" ) {
-				cleaningday = cleaningday.add(historyresetperiod, 'weeks');
-			} else if ( historyresetperiodunit == "months" ) {
-				cleaningday = cleaningday.add(historyresetperiod, 'months');
+		} else if ( deleteoption == "period" ) {
+			var cleaningday = calculateCleaningDay();
+			
+			if ( cleaningday <= today ) {
+				//console.log("gelukt!");
+
+				deleteHistory();
+				//localStorage.setItem("lasthistoryclean", today);
+				localStorage.setItem("cleaningday", cleaningday);
 			}
 			
-			if (cleaningday.format("DD-MM-YYYY") == today.format("DD-MM-YYYY")) {
-				alert('gelukt!');
-			}
-			localStorage.setItem("cleaningday", cleaningday);
-			
-			console.log("today: " + today.format("DD-MM-YYYY") + " period: " + historyresetperiod + " last clean: " + lasthistoryclean.format("DD-MM-YYYY") + " cleanday: " + cleaningday.format("DD-MM-YYYY"));
+			console.log("today: " + today.format("dddd, DD-MM-YYYY") + " /// period: " + getHistoryResetPeriod() +  " /// cleanday: " + cleaningday.format("dddd, DD-MM-YYYY"));
 		}
 	}
 
@@ -896,7 +935,7 @@
 		setHistory();
 		
 		// 'lazy' loading
-		setParameters();
+		setParameters(); // needs to be first in order for the clean storage to work properly (it get values from certain ui fields) => not applicable anymore
 		cleanLocalStorage();
 	}
 	
